[project]
name = "comfyui-paint-by-example"
description = "This repo is a simple implementation of [a/Paint-by-Example](https://github.com/Fantasy-Studio/Paint-by-Example) based on its [a/huggingface pipeline](https://huggingface.co/Fantasy-Studio/Paint-by-Example)."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Kangkang625/ComfyUI-paint-by-example"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-paint-by-example"
Icon = ""
